--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -s --reruns=0 --alluredir=report123
+addopts = -s --reruns=0 --alluredir=report
 testpaths = ./scripts
 python_files= test_*.py
 python_classes= Test*
